fix: update highlight light color for better contrast

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -7,7 +7,7 @@
 	--clr-primary-shade: #102538;
 	--clr-primary-glare: #22547c;
 	--clr-highlight: #fedb8b;
-	--clr-highlight-light: #ffefca;
+	--clr-highlight-light: #c3a457;
 	--clr-light: #fff;
 	--clr-mid: #ccc;
 	--clr-dark: #333;
